--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 CHANGES for vcp - Version CoPy
 
+0.07 Thu Nov 29 16:04:37 CST 2007
+   - Treat latex "\!" as a no-op
+
 0.06 Wed Nov 07 16:34:40 CST 2007
    - Changed the order so that symbols defined with newsymbol take
      precedence over predefined symbols
