--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
 CHANGES for vcp - Version CoPy
 
+0.08 Tue Jun 09 13:19:31 CST 2009
+   - Improved POD documentation
+   - Allowed "a^b_c" to produce a subsup as well as "a_c^b".
+
 0.07 Thu Nov 29 16:04:37 CST 2007
    - Treat latex "\!" as a no-op
 
